[package]
name = "airhorn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.15.7", features = ["full"] }
btleplug = { git = "https://github.com/micolous/btleplug.git", branch = "duplicate-data", version = "0.10.4" }
futures = "0.3.28"
tokio = "1.27.0"
uuid = "1.3.1"
