[package]
name = "airhorn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10.5"
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["macros"] }
uuid = "1.3.1"

[dev-dependencies]
bluer = { version = "0.15.7", features = ["full"] }