[package]
name = "airhorn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10.5"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
tokio = { version = "1.27.0", features = ["macros"] }
uuid = "1.3.1"
